fix: truncate long links names in the vault filters (#12887)

Merging to main for testing.

--- a/apps/web/src/scss/buttons.scss
+++ b/apps/web/src/scss/buttons.scss
@@ -184,7 +184,8 @@
   }
 }
 
-button.no-btn {
+button.no-btn,
+a.no-btn {
   background: transparent;
   border: none;
   padding: 0;
